compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__bitwise_const_ops-7.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 or 0

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..17, state: Value(Integer(ConstInt { magnitude: 1, sign: Positive, width: As32 })) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Integer(ConstInt { magnitude: 1, sign: Positive, width: As32 })

