compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__compare_ops_charseq-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "'c' > 'c'"

---
"_"@(FileId(1), 6..7) -> Bool(false)


